# Dithering

./: .gitignore
Dithering/: CHANGELOG.md  Dithering.cabal  ReadMe
Dithering/app/: Main.hs
Dithering/app-cli/: Main.hs
Dithering/app-gui/: Gui.hs
Dithering/src/Dithering/: Core.hs
