cabal-version:      3.8
name:               Dithering
version:            0.1.1.0
synopsis:           Dithering algorithms in Haskell
license:            NONE
author:             Tomasz Niedziałek, Wojciech Typer, Jakub Kogut
maintainer:         troll.yuck@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

-- This is our library section
library
    import:           warnings
    exposed-modules:  Dithering.Core
    build-depends:
        base >= 4.18 && < 4.19,
        JuicyPixels,
        vector
    hs-source-dirs:   src
    default-language: Haskell2010

-- This is the GUI executable
executable dithering-gui
    import:           warnings
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    main-is:          Gui.hs
    hs-source-dirs:   app-gui
    build-depends:
        Dithering,
        base,
        bytestring,
        gi-gtk,
        gi-gdkpixbuf,
        gi-glib,
        haskell-gi-base,
        JuicyPixels,
        stm,
        vector
    default-language: Haskell2010

-- This is the CLI executable
executable dithering-cli
    import:           warnings
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    hs-source-dirs:   app-cli
    build-depends:
        Dithering,
        base,
        JuicyPixels,
        filepath,
        directory
    default-language: Haskell2010